<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.subhashmorla.bepl.SmartBricks">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/banner03"
        android:layout_marginBottom="24dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:text="@string/bricks_text"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/light_weight_high_compressive_strength_aac_blocksa"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/textview1"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="18sp" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Order" />
  </LinearLayout>

</ScrollView>
