<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.subhashmorla.bepl.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="User Register"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_email_id"
            android:inputType="textEmailAddress" />

        <EditText

            android:id="@+id/pword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button

            android:id="@+id/regbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/register"
            android:textSize="20sp" />

        <TextView
            android:layout_margin="15dp"
            android:id="@+id/textview"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_registered_sign_in_here" />
    </LinearLayout>


</RelativeLayout>
