<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.subhashmorla.bepl.login2Activity">

    <LinearLayout




        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="User Login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_email_id"
            android:inputType="textEmailAddress" />

        <EditText

            android:id="@+id/pword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button

            android:id="@+id/regbtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/LOGIN"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/not_registered_yet_register_here"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>


</RelativeLayout>
